View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0023594 | Community | OCCT:Data Exchange | public | 2012-11-28 13:18 | 2014-10-09 18:32 |
Reporter | Roman Lygin | Assigned To | Roman Lygin | ||
Priority | normal | Severity | integration request | ||
Status | closed | Resolution | fixed | ||
Platform | A | OS | L | ||
Product Version | 6.5.4 | ||||
Target Version | 6.6.0 | Fixed in Version | 6.6.0 | ||
Summary | 0023594: XCAFDoc_LayerTool extended to work with layer defined by its label, not string | ||||
Description | Added methods IsSet(), UnSetOneLayer(), GetLayers() that accept TDF_Label or TDF_LabelSequence in addition to TCollection_ExtendedString or TColStd_HSequenceOfExtendedString. These methods allow for better performance as avoid searching for the layer label using its string. | ||||
Additional information and documentation updates | XDE User's Guide needs to be extended for respective methods. | ||||
Tags | No tags attached. | ||||
Test case number | Not needed | ||||
|
Pushed branch CR23594 into the git repository |
|
Branch CR23594 is ready to test |
|
Dear BugMaster, Branch CR23594 (and products from GIT master) was compiled on Linux and Windows platforms and tested. Regressions: Not detected Improvements: Not detected Testing cases: Not needed |
Date Modified | Username | Field | Change |
---|---|---|---|
2012-11-28 13:18 | Roman Lygin | New Issue | |
2012-11-28 13:18 | Roman Lygin | Assigned To | => gka |
2012-11-28 13:21 | Roman Lygin | Note Added: 0022406 | |
2012-11-28 13:21 | Roman Lygin | Status | new => resolved |
2012-11-28 17:44 | gka | Note Added: 0022419 | |
2012-11-28 17:44 | gka | Status | resolved => reviewed |
2012-11-28 18:27 |
|
Assigned To | gka => mkv |
2012-12-03 14:48 |
|
Note Added: 0022516 | |
2012-12-03 14:48 |
|
Test case number | => Not needed |
2012-12-03 14:48 |
|
Assigned To | mkv => bugmaster |
2012-12-03 14:48 |
|
Status | reviewed => tested |
2012-12-10 17:16 | Roman Lygin | Changeset attached | => occt master a28d5778 |
2012-12-10 17:16 | Roman Lygin | Assigned To | bugmaster => Roman Lygin |
2012-12-10 17:16 | Roman Lygin | Status | tested => verified |
2012-12-10 17:16 | Roman Lygin | Resolution | open => fixed |
2012-12-10 17:49 | bugmaster | Target Version | => 6.6.0 |
2013-04-23 13:36 |
|
Status | verified => closed |
2013-04-29 15:21 |
|
Fixed in Version | => 6.6.0 |
2014-10-09 18:32 | abv | Relationship added | has duplicate 0022596 |