0023594: XCAFDoc_LayerTool extended to work with layer defined by its label, not string